(2025.03.13) 웹기초 2주차
HTML 기본 문서 만들기

--- a/Week2/My.html
+++ b/Week2/My.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <!-- 주석 : ctrl + / -->
   <meta charset="UTF-8">
   <title>웹 문서 연습</title>
 </head>
 <body>
+  <!-- 여기서부터 body 내용 시작 -->
   <h1>웹 문서 만들기</h1>
   <hr>
   <p>HTML</p>
   <P>CSS</P>
   <P>JavaScript</P>
-  <p>정현준</p>
+  <!-- <p>정현준</p> -->
 </body>
 </html>
