--- a/ch08/border-7.html
+++ b/ch08/border-7.html
@@ -9,10 +9,15 @@
       height:150px;
     }
     /* Do it! 원하는 꼭짓점만 둥글게 처리하기 */
-    
+    .corner{
+      border: 2px solid blue;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+    /* 둥글게둥글게둥글게둥글레빙글빙글돌아가며춤을춤시다. */
 	</style>
 </head>
 <body>
-  <div></div>
+  <div class="corner"></div>
 </body>
 </html>
