--- a/ch08/display.html
+++ b/ch08/display.html
@@ -5,8 +5,15 @@
   <title>CSS display 속성</title>
   <style>
     /* Do it! li 요소를 가로로 나란히 배치하기 */
-    nav > ul {
-      list-style:none;      
+    nav > ul {list-style:none;}
+    nav ul li {
+      display: inline-block;
+      width: 100px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      margin: 10px;
+      border: 1px solid #222;
     }
     a {
       text-decoration: none;
