--- a/ch08/margin-1.html
+++ b/ch08/margin-1.html
@@ -11,8 +11,11 @@
       border:1px solid #222;
     }
     /* Do it! 박스 모델에 마진 지정하기 */
-
-	</style>
+    #margin1 {margin:50px;}
+    #margin2 {margin:30px 50px;}
+    #margin3 {margin:30px 20px 50px;}
+    #margin4 {margin:30px 50px 30px 50px;}
+    </style>
 </head>
 <body>
   <div id="margin1"></div>
