--- a/ch11/flex-10.html
+++ b/ch11/flex-10.html
@@ -26,7 +26,9 @@
       text-align: center;
     }
     /* Do it! 플렉스 항목의 flex-grow 지정하기 */
-    
+    #box1 {flex-grow: 1;}
+    #box2 {flex-grow: 1;}
+    #box4 {flex-grow: 2;}
   </style>
 </head>
 <body>
