--- a/ch11/flex-8.html
+++ b/ch11/flex-8.html
@@ -37,7 +37,7 @@
     <div class="box"><p>2</p></div>
     <div class="box"><p>3</p></div>
     <div class="box"><p>4</p></div>
-    <div class="box""><p>5</p></div>
+    <div class="box"><p>5</p></div>
   </div>          
 </body>
 </html>
