--- a/1학기 과제/우리 동네 소개하기/index.html
+++ b/1학기 과제/우리 동네 소개하기/index.html
@@ -2,40 +2,61 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>우리 동네 소개하기</title>
-  <link rel="stylesheet" href="css/">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <h1>우리 동네 소개하기</h1>    
-    <nav>
+  <header>
+    <div class="header-content">
+      <img src="images/original_c.jpg" alt="사하구 캐릭터" class="header-image">
+      <h1 class="header-title">
+        <a href="index.html">
+          <span class="word-1">우리</span>
+          <span class="word-2">동네</span> 소개하기
+        </a>
+      </h1>
+    </div>
+    <nav class="nav-menu">
       <ul>
-        <li>우리 동네의 역사</li>
-        <li>우리 동네의 행정구역 </li>
-        <li>우리 동네의 매력, 명소</li>
-        <li>우리 동네의 교통편</li>
+        <li><a href="story.html"><span class="nav-word-1">우리</span> <span class="nav-word-2">동네</span>의 이야기</a></li>
+        <li><a href="#"><span class="nav-word-1">우리</span> <span class="nav-word-2">동네</span>의 행정구역</a></li>
+        <li class="has-submenu">
+          <a href="#"><span class="nav-word-1">우리</span> <span class="nav-word-2">동네</span>의 매력, 명소</a>
+          <ul class="submenu">
+            <li><a href="#">회화나무 샘터공원</a></li>
+            <li><a href="#">뉴코아아울렛</a></li>
+            <li><a href="#">우리 집</a></li>
+          </ul>
+        </li>
+        <li><a href="#"><span class="nav-word-1">우리</span> <span class="nav-word-2">동네</span>의 교통편</a></li>
       </ul>
     </nav>
   </header>
-  <hr>
   <main>
-    <h2>나는 말하는 돌멩이다.</h2>
+    <img src="images/batang.png" alt="바탕화면" class="batang">
   </main>
-  <hr>
-  <footer>
-    <ul>
-      <li>자기 소개</li>
-      <li>저작권 정책</li>
-      <li>개인정보처리방침</li>
-      <li>홈페이지 이용안내</li>
-      <li>이용약관</li>
-      <li>사이트맵</li>
-    </ul>
-    <ul>
-      <li><a href="#"><img src="images/sns-1.png"></a></li>
-      <li><a href="#"><img src="images/sns-2.png"></a></li>
-      <li><a href="#"><img src="images/sns-3.png"></a></li>
-    </ul>
-  </footer>
+  <footer>    
+    <div id="bottomMenu">
+      <ul>
+        <li><a href="#">자기 소개</a></li>
+        <li><a href="#">저작권 정책</a></li>
+        <li><a href="#">개인정보처리방침</a></li>
+        <li><a href="#">홈페이지 이용안내</a></li>
+        <li><a href="#">이용약관</a></li>
+        <li><a href="#">사이트맵</a></li>
+      </ul>
+      <div id="sns">
+        <ul>
+          <li><a href="#"><img src="images/sns-1.png"></a></li>
+          <li><a href="#"><img src="images/sns-2.png"></a></li>
+          <li><a href="#"><img src="images/sns-3.png"></a></li>
+        </ul>
+      </div>
+      <div id="project">
+        <p>© 2025 우리 동네 소개하기 프로젝트</p> 
+      </div>     
+    </div>
+  </footer>  
 </body>
 </html>
